@@ -7,6 +7,10 @@ Version: 3.07pre
    - MP2: Update module, and tests for mod_perl 2.0.0 RC5.  mod_perl2 users
      MUST use Apache2::AuthCookie now.
    - Require Apache::Test 1.22
+   - Add support for ${auth_name}SessionTimeout configuration paramter
+     which will re-issue the ticket with the expires parameter set to the
+     value of this configuration setting for each request.  This is useful for
+     idle-timeout.
    - POD fixes.
    - MP2: fix uninitialized warnings if no POST/GET data (RT 11371)
    - make sure recognize_user() returns an Apache constant in all cases.
